--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
-/*
+/* src/stalin.css */
+/* main.css */
+button[data-v-b9559542] {
+  margin-top: 10px;
+}
+img[data-v-b9559542] {
+  margin-top: 10px;
+  border-radius: 10px;
+  width: 100%;
+  height: 400px;
+}
 
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
-
-If your plugin does not need CSS, delete this file.
-
-*/
+/* src/main.css */
